Fix blog post paragraph spacing

--- a/web/wp-content/themes/cncf-twenty-two/source/scss/core/_typography.scss
+++ b/web/wp-content/themes/cncf-twenty-two/source/scss/core/_typography.scss
@@ -123,6 +123,10 @@ h3,
 		font-size: 16px;
 	}
 
+	p + p {
+		margin-top: 30px;
+	}
+
 	h1,
 	h2,
 	h3,
